[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 136.0
margin_bottom = 86.0

[node name="PausedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 14.0
text = "Paused"

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 136.0
margin_bottom = 38.0
text = "Resume"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 136.0
margin_bottom = 62.0
text = "Back to title screen"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 136.0
margin_bottom = 86.0
text = "Quit to desktop"

[connection signal="button_up" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
